ch10/ch10-features/config-macro-usage/tests/fails/missing_value_after_equals.rs
use config_macro::config;

config!(path =);

fn main() {}