ch10/ch10-features/config-macro-usage/tests/fails/missing_value_after_equals.stderr
error: expected value after the equals sign
 --> tests/fails/missing_value_after_equals.rs:3:1
  |
3 | config!(path =);
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `config` (in Nightly builds, run with -Z macro-backtrace for more info)
